tests/expected_errors/loop_move_errors.err
[    INFO] --- Starting compilation of tests/sources/invalid/loop_move_errors.fire...
[   ERROR] --- Use-after-move error: variable 'a' may have been moved on another control-flow path
> println(a);  // Error: a may have moved on loop path
          ^
(tests/sources/invalid/loop_move_errors.fire:15:9)
[   ERROR] --- Use-after-move error: variable 'b' may have been moved on another control-flow path
> println(b);  // Error: b may have moved on loop path
          ^
(tests/sources/invalid/loop_move_errors.fire:21:9)
[   ERROR] --- Semantic analysis failed with 2 errors
